--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
 title: HackAcloud
-description: from TowardsNetwork
+description: Security for Cloud, CloudNative and DevSecOps from TowardsNetwork
