--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: poole/hyde
+remote_theme: just-the-docs/just-the-docs
 title: HackAcloud
 description: Security for Cloud, CloudNative and DevSecOps from TowardsNetwork
