--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 remote_theme: just-the-docs/just-the-docs
 title: HackAcloud
 description: Security for Cloud, CloudNative and DevSecOps from TowardsNetwork
+
+theme: jekyll-theme-tactile
